# avater_challenge

./: README.md  package.xml  readme.md  setup.cfg
avatar_challenge/: package.xml  setup.py  shapes_loader.py
avatar_challenge/avatar_challenge/: avatar_challenge.py  shapes_loader.py  shapes_planner.py
avatar_challenge/launch/: start.launch.py
avatar_challenge/msg/: TragetPoints.msg
avatar_challenge/resource/: avatar_challenge
config/: shapes.yaml
